--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Robo task wrapper for tslint",
     "license": "GPL-2.0+",
     "config": {
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "sort-packages": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -13,6 +14,7 @@
     },
     "require-dev": {
         "cheppers/git-hooks": "^0.0.8",
+        "cheppers/robo-phpcs": "^0.0.4",
         "codeception/codeception": "^2.2",
         "squizlabs/php_codesniffer": "2.6.2",
         "symfony/process": "^2.8|^3.1"
