--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
   - '7.0'
 
 env:
-  - COMPOSER_NO_INTERACTION=1 COMPOSER_DISABLE_XDEBUG_WARN=1
+  - 'COMPOSER_NO_INTERACTION=1 COMPOSER_DISABLE_XDEBUG_WARN=1'
 
 cache:
   directories:
