--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
+        "php": ">=7.1",
         "cheppers/asset-jar": "^0.0",
         "consolidation/robo": "^1.0"
     },
