--- a/.travis.yml
+++ b/.travis.yml
@@ -12,19 +12,18 @@ matrix:
             sudo: 'required'
             language: 'php'
             php: '7.1'
-            env:
-                - 'COMPOSER_NO_INTERACTION=1 COMPOSER_DISABLE_XDEBUG_WARN=1'
-        -
-            os: 'osx'
-            language: 'generic'
-            env:
-                - 'COMPOSER_NO_INTERACTION=1 COMPOSER_DISABLE_XDEBUG_WARN=1 _PHP=php71'
+#        -
+#            os: 'osx'
+#            language: 'generic'
 
 before_install:
+    - 'export COMPOSER_NO_INTERACTION=1'
+    - 'export COMPOSER_DISABLE_XDEBUG_WARN=1'
+    - 'export BREW_PHP=php71'
     - 'src-dev/scripts/travis/before_install.sh'
 
 install:
-    - 'composer install'
+    - 'composer install --no-progress'
 
 script:
     - './bin/robo --ansi lint'
