--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -1,6 +1,6 @@
 
-class_name: AcceptanceTester
+class_name: 'AcceptanceTester'
 modules:
     enabled:
-        - \Helper\Module\Cli
-        - \Helper\Acceptance
+        - '\Sweetchuck\Robo\TsLint\Test\Helper\Module\Cli'
+        - '\Sweetchuck\Robo\TsLint\Test\Helper\Acceptance'
