--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -1,6 +1,6 @@
 
-class_name: UnitTester
+class_name: 'UnitTester'
 modules:
     enabled:
-        - Asserts
-        - \Helper\Unit
+        - 'Asserts'
+        - '\Sweetchuck\Robo\TsLint\Test\Helper\Unit'
