--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
         "consolidation/robo": "^1.0"
     },
     "require-dev": {
+        "codeception/codeception": "^2.2",
+        "sweetchuck/codeception-module-robo-task-runner": "^0.0.1",
         "sweetchuck/git-hooks": "^0.0",
         "sweetchuck/lint-report": "^0.0",
         "sweetchuck/robo-git": "^0.0",
         "sweetchuck/robo-phpcs": "^0.0",
-        "codeception/codeception": "^2.2",
         "symfony/process": "^2.8 || ^3.1"
     },
     "autoload": {
