--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -3,5 +3,6 @@ class_name: 'AcceptanceTester'
 
 modules:
     enabled:
-        - '\Sweetchuck\Robo\TsLint\Test\Helper\Module\Cli'
+        - 'Asserts'
+        - '\Sweetchuck\Codeception\Module\RoboTaskRunner\RoboTaskRunner'
         - '\Sweetchuck\Robo\TsLint\Test\Helper\Acceptance'
